fix: scroll issue with 100% gap at the bottom

--- a/src/components/widget/widget-slide-over.module.scss
+++ b/src/components/widget/widget-slide-over.module.scss
@@ -1,7 +1,7 @@
 .widgetSlideOver {
   width: 100%;
   position: relative;
-  top: -28rem;
+  margin-top: -28rem;
   z-index: 1;
 }
 
